--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ body{
 } 
 
 .menu li:hover ul, .menu li.over ul{
+    z-index: 1;
+
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
