--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
     font-family: 'Russo One', sans-serif;
     font-size: 0.9rem;
     text-transform: uppercase;
+    text-decoration: none;
     color: white;
 }
 
@@ -40,6 +41,7 @@ body{
 .menu li  ul{
     height: 70px;
     width: 10%;
+    box-sizing:content-box;
     
     padding: 10px;
     position:absolute;
