--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
 
 .construcao{
     width: 100%;
-    padding-top: 100px;
+    padding-top: 70px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -213,4 +213,49 @@ body{
 
 .servicosBox:hover{
     transform: scale(1.2);
+}
+
+
+.quebraCabeca figure{
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.puzzle img{
+    width: 30%;
+
+}
+
+
+.textoQuebraCabeca{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textoQuebraCabeca h1{
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: var(--rocketblue);
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.textoQuebraCabeca h2{
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    color: var(--rocketred);
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.textoQuebraCabeca h3{
+    color:black;
+    font-size: 1rem;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
 }
